# pysodes

./: .clang_format  .gitignore  CMakeLists.txt  LICENSE  README.md  environment.devenv.yml  pyproject.toml  setup.py  setup_new.py  tasks.py
.github/workflows/: linux.yml  osx.yml  windows.yml
cmake/: CCache.cmake  CondaAware.cmake  FindDeps.cmake  FindMKL.cmake
examples/boost/: CMakeLists.txt  call_sodes_rk4.cpp  dynamic_eigen.cpp  lorenz_example.cpp
examples/boost/standalones/: dynamic_eigen.cpp  dynamic_lorenz_eigen.cpp  simple_boost.cpp
notebooks/: simple_usage.ipynb
pysodes/bindings/: CMakeLists.txt  bindings.cpp
pysodes/sodes/: BoostOdeint.hpp  CMakeLists.txt  wrapper.hpp
pysodes/sodes/odeint/: BoostOdeint.hpp
src/: main.py
src/bindings/: CMakeLists.txt  bindings.cpp
src/boost/: CMakeLists.txt  lorenz_example.cpp  odeint_eigen_example.cpp  simple_boost.cpp
src/pysodes/: main.py  odeint.py
src/sodes/: CMakeLists.txt  math_types.hpp
src/sodes/odeint/: BoostOdeint.hpp
tests/: test_odeint_integrate_const.py
